examples/compiler_errors/header_counts/WarningMain.flx
// skip: support or non-error companion fixture for compiler diagnostics

import WarningOnly

fn main() -> Unit {
    let _x = WarningOnly.SomeInt(1)
}
